<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Social Toilet</string>
    <string name="action_settings">Configuración</string>
    <string name="action_exit">Cerrar sesión</string>
    <string name="hello_world">Hello world!</string>
    <string name="findToilets">Encontrar Baños</string>
    <string name="admob_id">a151f08d228786e</string>
    <string name="testDeviceId">TEST_EMULATOR, DD10FCE3B3D13921B8B0CA1FC9706EC7</string>
    <string name="rateButton">Calificar</string>
    <string name="changeCalificationButton">Cambiar</string>
    <string name="detailToilet_calificationCount">calificaciones</string>
    <string name="detailToilet_galeryButton">Fotos</string>
    <string name="detailToilet_commentsButton">Comentarios</string>
    <string name="calification_dialog_message">Califica el Toilet</string>
    <string name="comment_dialog_message">Comenta</string>
    <string name="calification_dialog_calificate">Calificar</string>
    <string name="comment_dialog_comment">Comentar</string>
    <string name="comment_dialog_continue">Continuar</string>
    <string name="calification_dialog_cancel">Cancelar</string>
    <string name="comment_dialog_cancel">Cancelar</string>
    <string name="title_activity_mapping_toilet">Mapa de Toilets</string>
    <string name="title_activity_detail_toilet">Detalle</string>
    <string name="detailToiletCheckbox1">Dejan pasar sin consumir</string>
    <string name="detailToiletCheckbox2">Tiene agua</string>
    <string name="detailToiletCheckbox3">Tiene papel</string>
    <string name="detailToiletCheckbox4">Tiene jabon</string>
    <string name="detailToiletCheckbox5">Tiene espejo</string>
    <string name="detailToiletCheckbox6">Las puertas de las cabinas cierran</string>
    <string name="detailToiletCheckbox7">Tiene insumos femeninos a la venta</string>
    <string name="detailToiletCheckbox8">Tiene preservativos a la venta</string>
    <string name="detailToiletCheckbox9">Apto para discapacitados</string>
    <string name="detailToiletCheckbox10">Posee cambiador de bebés</string>
    <string name="addToiletHere">Agregar acá</string>
    <string name="title_activity_add_toilet">Crear Toilet</string>
    <string name="hintDescription">Descripción</string>
    <string name="hintAddress">Dirección</string>
    <string name="hintTitle">Título</string>
    <string name="hintComment">Comentar</string>
    <string name="addButton">Agregar</string>
    <string name="title_activity_toilet_comments">Comentarios</string>
    <string name="toilet_comments_add_comment_button">Comentar</string>
    <string name="title_activity_toilet_galery">Galería</string>
    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    <string name="clean_data">Borrar</string>
	<string name="picture">Imagen</string>
	<string name="debug">Modo debug</string>
	<string name="map_distance_default_value">200 mts</string>
	<string name="update">Actualizar</string>
	<string name="add_new_toilet">Agregar</string>
	<string name="toogleButton"></string>

</resources>
