<merge xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:id="@+id/LinearLayout01"
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/generalBackground">
		
	<CheckBox
		android:id="@+id/canBeUsedWithoutConsumption"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:textColor="@color/generalFont"
		android:text="@string/detailToiletCheckbox1" />
	
   <CheckBox
       android:id="@+id/hasWater"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_weight="0.22"
       android:textColor="@color/generalFont"
       android:text="@string/detailToiletCheckbox2" />
	   
	<CheckBox
       android:id="@+id/hasToiletPaper"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_weight="0.22"
       android:textColor="@color/generalFont"
       android:text="@string/detailToiletCheckbox3" />

   <CheckBox
       android:id="@+id/hasSoap"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_weight="0.22"
       android:textColor="@color/generalFont"
       android:text="@string/detailToiletCheckbox4" />

   <CheckBox
       android:id="@+id/hasMirror"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_weight="0.22"
       android:textColor="@color/generalFont"
       android:text="@string/detailToiletCheckbox5" />

   <CheckBox
       android:id="@+id/doToiletDoorCloses"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_weight="0.22"
       android:textColor="@color/generalFont"
       android:text="@string/detailToiletCheckbox6" />

   <CheckBox
       android:id="@+id/hasGotLadiesItemsOnSale"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_weight="0.22"
       android:textColor="@color/generalFont"
       android:text="@string/detailToiletCheckbox7" />

   <CheckBox
       android:id="@+id/hasGotCondomsOnSale"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:textColor="@color/generalFont"
       android:text="@string/detailToiletCheckbox8" />
   
   <CheckBox
       android:id="@+id/isAptForHandicapped"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:textColor="@color/generalFont"
       android:text="@string/detailToiletCheckbox9" />
   
   <CheckBox
       android:id="@+id/hasBabyRoom"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:textColor="@color/generalFont"
       android:text="@string/detailToiletCheckbox10" />
	   
    </LinearLayout>
    
</merge>       