<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>

	<item
        android:id="@+id/action_exit"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_exit"/>

    <item
        android:id="@+id/item_comment_button"
        android:icon="@drawable/comment_button"
        android:showAsAction="always"
        android:title="@string/title_activity_toilet_comments">
    </item>
    
    <item
        android:id="@+id/item_gallery_button"
        android:icon="@drawable/view_gallery_button"
        android:showAsAction="always"
        android:title="@string/title_activity_toilet_galery">
    </item>
    
</menu>
