<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AddToiletActivity" >

    <requestFocus/>

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/ad"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <EditText
                android:id="@+id/editDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:ems="10"
                android:hint="@string/hintDescription"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/editAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/editDescription"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="17dp"
                android:ems="10"
                android:hint="@string/hintAddress"
                android:inputType="textPostalAddress" />

            <RatingBar
                android:id="@+id/ratingBar1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/editAddress"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp" />

            <Button
                android:id="@+id/buttonAcceptEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/linearLayout1"
                android:layout_marginTop="17dp"
                android:text="@string/addButton" />

            <LinearLayout
                android:id="@+id/linearLayout1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/ratingBar1"
                android:orientation="vertical" >

                <CheckBox
                    android:id="@+id/checkBox1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/detailToiletCheckbox1" />

                <CheckBox
                    android:id="@+id/checkBox2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.22"
                    android:text="@string/detailToiletCheckbox2" />

                <CheckBox
                    android:id="@+id/checkBox3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.22"
                    android:text="@string/detailToiletCheckbox3" />

                <CheckBox
                    android:id="@+id/checkBox4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.22"
                    android:text="@string/detailToiletCheckbox4" />

                <CheckBox
                    android:id="@+id/checkBox5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.22"
                    android:text="@string/detailToiletCheckbox5" />

                <CheckBox
                    android:id="@+id/checkBox6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.22"
                    android:text="@string/detailToiletCheckbox6" />

                <CheckBox
                    android:id="@+id/checkBox7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.22"
                    android:text="@string/detailToiletCheckbox7" />

                <CheckBox
                    android:id="@+id/checkBox8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/detailToiletCheckbox8" />
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>

    <com.google.ads.AdView
        xmlns:googleads="http://schemas.android.com/apk/lib/com.google.ads"
        android:id="@+id/ad"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/scrollView1"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/admob_id"
        googleads:loadAdOnCreate="true"
        googleads:testDevices="@string/testDeviceId" >
    </com.google.ads.AdView>

</RelativeLayout>
