<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    

    <requestFocus />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <ScrollView
            android:id="@+id/scrollView1"
            android:layout_width="match_parent"
       		android:layout_height="185dp"
            android:layout_weight="0.55" >

            <LinearLayout
                android:id="@+id/LinearLayout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/toiletDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/toiletAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="17dp"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textStyle="italic" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <Button
                        android:id="@+id/button1"
                        style="?android:attr/buttonStyleSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/rateButton"
                        android:onClick="onCalificationButtonTapped" />
                    
                    <RatingBar
                        android:id="@+id/ratingBar1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:isIndicator="true"
                        android:numStars="5"
                        android:rating="0.0"
                        android:stepSize="1.0" />
                                        
                </LinearLayout>

                <View
                    android:id="@+id/lineSeparator1"
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/black" />

                <LinearLayout
                    android:id="@+id/linearLayout1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="22dp"
                    android:orientation="vertical" >

                    <CheckBox
                        android:id="@+id/checkBox1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/detailToiletCheckbox1" 
                        android:clickable="false"/>

                    <CheckBox
                        android:id="@+id/checkBox2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.22"
                        android:text="@string/detailToiletCheckbox2"
                        android:clickable="false" />

                    <CheckBox
                        android:id="@+id/checkBox3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.22"
                        android:text="@string/detailToiletCheckbox3"
                        android:clickable="false" />

                    <CheckBox
                        android:id="@+id/checkBox4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.22"
                        android:text="@string/detailToiletCheckbox4"
                        android:clickable="false" />

                    <CheckBox
                        android:id="@+id/checkBox5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.22"
                        android:text="@string/detailToiletCheckbox5"
                        android:clickable="false" />

                    <CheckBox
                        android:id="@+id/checkBox6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.22"
                        android:text="@string/detailToiletCheckbox6"
                        android:clickable="false" />

                    <CheckBox
                        android:id="@+id/checkBox7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.22"
                        android:text="@string/detailToiletCheckbox7"
                        android:clickable="false" />

                    <CheckBox
                        android:id="@+id/checkBox8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/detailToiletCheckbox8"
                        android:clickable="false" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
        <com.google.ads.AdView
            xmlns:googleads="http://schemas.android.com/apk/lib/com.google.ads"
            android:id="@+id/ad"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            ads:adSize="BANNER"
            ads:adUnitId="@string/admob_id"
            googleads:loadAdOnCreate="true"
            googleads:testDevices="@string/testDeviceId" >
        </com.google.ads.AdView>
    </LinearLayout>

        <!-- For rating bar icon modification 
    android:progressDrawable="@drawable/ratingbar_red" -->

</RelativeLayout>