<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/generalBackground"
    android:contentDescription="@string/addToiletHere"
    android:paddingBottom="@dimen/activity_vertical_bottom_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <requestFocus />
    
    <com.google.ads.AdView
        xmlns:googleads="http://schemas.android.com/apk/lib/com.google.ads"
        android:id="@+id/ad"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/admob_id"
        ads:testDevices="@string/testDeviceId"
        ads:loadAdOnCreate="true" >
    </com.google.ads.AdView>

    <Button
        android:id="@+id/button3"
        style="@style/SocialToiletButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/ad"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="41dp"
        android:onClick="onJumpMapTapped"
        android:text="Saltar mapa" />

    <Button
        android:id="@+id/button1"
        style="@style/SocialToiletButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:drawableLeft="@drawable/map"
        android:onClick="findNearToiletsTapped"
        android:text="@string/findToilets" />

    <Button
        android:id="@+id/button2"
        style="@style/SocialToiletButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button1"
        android:layout_alignRight="@+id/button1"
        android:layout_below="@+id/button1"
        android:layout_marginTop="21dp"
        android:drawableLeft="@drawable/bath"
        android:onClick="addToiletHereTapped"
        android:text="@string/addToiletHere" />

</RelativeLayout>