<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_bottom_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/generalBackground"
    tools:context=".DetailToiletActivity" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_above="@+id/ad" >

        <LinearLayout
            android:id="@+id/LinearLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/toiletDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/generalFont"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textStyle="bold" />
            
			<LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" 
                android:orientation="horizontal" >
                
	            <RatingBar
	                android:id="@+id/globalRating"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:isIndicator="true"
	                android:rating="0.0"
	                android:stepSize="0.5"
	                style="?android:attr/ratingBarStyleSmall" />
                        
				<TextView
	                android:id="@+id/calificationCount"
	                android:layout_width="match_parent"
	                android:layout_height="wrap_content"
	                android:textColor="@color/generalFont"
	                android:textAppearance="?android:attr/textAppearanceSmall"
	                android:text="@string/detailToilet_calificationCount" />
				
            </LinearLayout>
            
            <TextView
                android:id="@+id/toiletAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:textColor="@color/generalFont"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="italic" />

            <View
                android:id="@+id/lineSeparator2"
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@android:color/white" />
            
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <Button
                    android:id="@+id/calificateButton"
                    style="@style/SocialToiletCalificateButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:onClick="onCalificationButtonTapped"
                    android:text="@string/rateButton" />
                
                <RatingBar
                    android:id="@+id/userCalification"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:isIndicator="true"
                    android:rating="0.0"
                    android:stepSize="1.0"
                    style="@style/SocialToiletRatingBar" />
                                    
            </LinearLayout>

            <View
                android:id="@+id/lineSeparator1"
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@android:color/white" />

            <LinearLayout
		        android:id="@+id/checkboxLayout"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content">
		        <include layout="@layout/checkboxs_toilet" />
    		</LinearLayout>
    		
        </LinearLayout>
        
    </ScrollView>

    <com.google.ads.AdView
        xmlns:googleads="http://schemas.android.com/apk/lib/com.google.ads"
        android:id="@+id/ad"
        android:layout_width="fill_parent"
   		android:layout_height="wrap_content"
    	android:layout_alignLeft="@+id/scrollView1"
    	android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/admob_id"
        googleads:loadAdOnCreate="true"
        googleads:testDevices="@string/testDeviceId" >
    </com.google.ads.AdView>

</RelativeLayout>